--- a/week2/Intro.html
+++ b/week2/Intro.html
@@ -11,14 +11,14 @@
                 <img src="https://image.shutterstock.com/image-photo/eiffel-tower-arc-de-triomphe-260nw-1704255364.jpg" width="200px"/>
                 <h3>Look at the wonderful images</h3>
                 <h6>Link</h6>
-                <a href="www.google.com">Go to Google</a >
-                <a href="www.facebook.com">Go to Facebook</a > 
-                <a href="www.dietdoctor.com">Go to DietDoc </a >
+                <a href="https://www.google.com">Go to Google</a >
+                <a href="https://www.facebook.com">Go to Facebook</a > 
+                <a href="https://www.dietdoctor.com">Go to DietDoc </a >
                 <h1>If you get stuck review what you have learned </h1>
                 <p>Practice often and dont give up</p>
                 <h5>Eventually you will get it</h5>
                 <span>Practice Again</span>
-                <h4>today</h4>
+                <!-- <h4>today</h4> -->
             </div>
             <ol>
                 <li>item a</li>
