--- a/week2/project1/index.html
+++ b/week2/project1/index.html
@@ -37,6 +37,6 @@
            <div>You might also like</div>
            <div>
             <p>
-           <a href= "http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/]"> CIA To Shift Focus To Greeting Cards</a>
+           <a href= " http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/"> CIA To Shift Focus To Greeting Cards</a>
         </body>
 </html>
