--- a/week2/project1/index.html
+++ b/week2/project1/index.html
@@ -13,7 +13,7 @@
             <div>
 
             <div>
-               <img src="https://i.kinja-img.com/gawker-media/image/upload/s--RNd7CQyJ--/c_fit,fl_progressive,q_80,w_470/zuzaejhbyctibbyvoz8h.jpg" alt="Director">
+               <img src=" https://i.kinja-img.com/gawker-media/image/upload/s--RNd7CQyJ--/c_fit,fl_progressive,q_80,w_470/zuzaejhbyctibbyvoz8h.jpg ]" alt="Director">
             </div>
             <div>
 
@@ -37,6 +37,6 @@
            <div>You might also like</div>
            <div>
             <p>
-           <a href= " http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/"> CIA To Shift Focus To Greeting Cards</a>
+           <a href= " http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/ ]"> CIA To Shift Focus To Greeting Card</a>
         </body>
 </html>
