--- a/week3/index.html
+++ b/week3/index.html
@@ -21,7 +21,7 @@
             </div>
             <div>
 
-               <p>  LANGLEY,VA -- A report released Tuesday by the CIA's Office of the Inspector General revealed that the
+               <p class="BB"> LANGLEY,VA --</a> A report released Tuesday by the CIA's Office of the Inspector General revealed that the
                 CIA has mistakenly obscured hundreds of thousands of pages of critical intelligence information with black
                 highlighters.</p>
 
