--- a/week4/positioning.html
+++ b/week4/positioning.html
@@ -17,14 +17,14 @@
 
             <p> When you think of mans best friend it makes you smile. Afterall who can resist the lick of a dog. Dogs are full of love and are irresistable. If you are having a bad day this image will make you smile.
                 We have yet to find a person who can resist a dog</p> 
-                
+
             <p>When you think of mans best friend it makes you smile. Afterall who can resist the lick of a dog. Dogs are full of love and are irresistable. If you are having a bad day this image will make you smile.
                 We have yet to find a person who can resist a dog</p>
              
 
             <section class="container">
                 <div class="image float"><img src="https://images.unsplash.com/photo-1598500346541-da74e0ac631c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1328&q=80"> alt="Cute Dog"><p>
-        <a>            
+        <p class="underline"            
             <section class="container">
                 <div class="image float"><img src="https://images.unsplash.com/photo-1586326709898-0a344840a314?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
         <div>
