--- a/week4/positioning.html
+++ b/week4/positioning.html
@@ -8,7 +8,12 @@
     <body>
        
       <nav>
-          
+         <Ul class="Menu">
+          <li><a href="positioning.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </nav>
+         </Ul> 
         <a>
         <h1>Dogs Are Funny Blog..</h1> 
         </a> 
