--- a/week4/Project2.html
+++ b/week4/Project2.html
@@ -1,9 +1,17 @@
 <!DOCTYPE HTML>
 <html>
-
-
+    <Title>Project2</Title>
+    <link rel="stylesheet" href="project2.css"/>
 <head>
+
     <body>
+        <nav>
+            <ul class="menu">
+                <li><a class="button" href="project2.html">Home</a></li>
+                <li><a class="button" href="about.html">About</a></li>
+                <li><a class="button" href="Contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
 
     </body>
 </head>
