--- a/week4/positioning.html
+++ b/week4/positioning.html
@@ -8,8 +8,8 @@
     <body>
        
       <nav>
-        <h1>Dogs Are Funny Blog..</h1>
-         <Ul class="Menu">
+        <h1> Dogs Are Funny Blog..</h1>
+         <Ul class="SS">
           <li><a class="button" href="positioning.html">Home</a></li>
           <li><a class="button" href="about.html">About</a></li>
           <li><a class="button" href="contact.html">Contact</a></li>
