--- a/week4/Project2.html
+++ b/week4/Project2.html
@@ -66,6 +66,8 @@
             <i class="fa fa-circle-thin fa-stack-2x"></i>
             <i class="fa fa-facebook fa-stack-1x"></i>
           </span>
+          <h4>Like Our Page</h4>
+        <i class="fa fa-thumbs-up" style="font-size:84px;"></i>
          </main>   
 
     </body>
