--- a/week6/Pseudo.html
+++ b/week6/Pseudo.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="Pseudo.css">
         <H1>My Boxes</H1>  
         <body>
-            <audio src="537529__steehudg__make-it-rain-sh-mp3.m4a" controls></audio>"Push Play"
+            <audio src="537529__steehudg__make-it-rain-sh-mp3." controls></audio>"Push Play"   
             
             <div class="BB">
                 <div class="boxA"></div >
