--- a/week6/project.html
+++ b/week6/project.html
@@ -18,7 +18,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="grid-container">
-  <div class="box1"><img src="https://images.unsplash.com/photo-1519014816548-bf5fe059798b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1475&q=100"></div>
+  <div class="box1">
+    <img src="https://images.unsplash.com/photo-1519014816548-bf5fe059798b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1475&q=100"></div>
   <div class="box2"><table style="width:50%">
     <h2>Nail Pricing </h2> 
     <tr>
@@ -45,7 +46,7 @@
   <h2></h2>   
  </table>
 
-  <div class="box3">When it comes to healthy looking nails we got you covered. <p>We specialize in keeping your nails looking great.</div>  
+  <div class="box3">When it comes to healthy looking nails we got you covered. <div>We specialize in keeping your nails looking great.</div>  
   <div class="box4"><div class="flex-container">
     <h3>Other Services (Call for Pricing)</h3>
    <div>Eyebrow Wax</div>
