--- a/week6/project.html
+++ b/week6/project.html
@@ -13,15 +13,19 @@
   
 </nav>
   <h1>The Nail Bar </h1>
-<body>
+<main>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</main>
 
-<div class="grid-container">
-  <div class="box1">
-    <img src="https://images.unsplash.com/photo-1519014816548-bf5fe059798b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1475&q=100"></div>
-  <div class="box2"><table style="width:50%">
-    <h2>Nail Pricing </h2> 
+  
+    
+  <div class="grid-container">
+    <div class="box1">
+      <img src="https://images.unsplash.com/photo-1519014816548-bf5fe059798b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=575&q=50"></div>
+    <div class="box2"><table style="width:50%">
+        <div class="box2"></div>
+        <h2>Nail Pricing </h2>
     <tr>
         <th>        </th>
         <th>Full Set</th>
@@ -43,15 +47,16 @@
     <th>$25.00</th>
     <th>$20.00</th>
     <th>$23.00</th>
-  <h2></h2>   
- </table>
+    </table>  
+  
+</div>
 
   <div class="box3">When it comes to healthy looking nails we got you covered. <div>We specialize in keeping your nails looking great.</div>  
   <div class="box4"><div class="flex-container">
     <h3>Other Services (Call for Pricing)</h3>
-   <div>Eyebrow Wax</div>
-   <div>Brazillan Wax</div>
-   <div>Massage(30 min sessions)</div>  
+   <div class="box4"> Wax </div>
+   <div class="box4">Brazillan </div>
+   <div class="box4"> Massage(30 min sessions)</div>  
  
   
 </div>
@@ -65,9 +70,8 @@
     <a href="#" class="fa fa-linkedin"></a>
     <a href="#" class="fa fa-youtube"></a>
     <a href="#" class="fa fa-instagram"></a>
-    
-</footer>
 <marquee>Now Open on Sundays!! Be beautiful, Be unique, Be You</marquee>
+</footer>
 </header>
 
 </html>
