--- a/week7/Capstone.html
+++ b/week7/Capstone.html
@@ -12,10 +12,10 @@
 
     <nav>
         <div class="navbar">
-          <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-          <a href="#"><i class="fa fa-fw fa-search"></i> Search Fleet</a>
-          <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-          <a href="#"><i class="fa fa-fw fa-user"></i> Login Portal</a>
+          <a class="active" href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a>
+          <a href="Fleet.html"><i class="fa fa-fw fa-search"></i> Search Fleet</a>
+          <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+          <a href="Login.html"><i class="fa fa-fw fa-user"></i> Login Portal</a>
         </nav> 
     </div>
         <Header>
@@ -26,24 +26,25 @@
 
 
 <div class="grid-container">
-  <div class="box1"></div>
-  <div class="box2"></div>
-  <div class="box3"></div>  
-  <div class="box4"></div>
-  <div class="box5"></div>
-  <div class="box6"></div>  
-  <div class="box7"></div>
-  <div class="box8"></div>
-  <div class="box9"></div>  
+  <div class="box2">Welcome to Keep Trucking where driving meets excellence. We are a premier logistics company servicing<a>
+    the southeast reagion. We specialize in hot shots, next day service, long distance deliveries as well as same day delivery.<a>
+     Located in the metropolitan area of Atlanta we are in a prime location to reach most major highways in the southeast.<a> 
+     We offer very competitive rates compared to our competitors. Contact us for specific pricing.   
+        <a>One stop, One quote, job done right! Keep Trucking is the name and quality service is our game.</a>
+  </div>
+  <div class="box2">
+      <img src= "download (1).png">
+  </div>  
+ 
 </div>
     <footer>
         <footer>
-            <a href="#" class="fa fa-facebook"></a>
-              <a href="#" class="fa fa-twitter"></a>
-              <a href="#" class="fa fa-google"></a>
-              <a href="#" class="fa fa-linkedin"></a>
-              <a href="#" class="fa fa-youtube"></a>
-              <a href="#" class="fa fa-instagram"></a>
+            <a href="https://www.facebook.com"class="fa fa-facebook"></a>
+              <a href="https://twitter.com/"class="fa fa-twitter"></a>
+              <a href="https://www.google.com"class="fa fa-google"></a>
+              <a href="www.linkedin.com"class="fa fa-linkedin"></a>
+              <a href="www.youtube.com"class="fa fa-youtube"></a>
+              <a href="www.instagram.com"class="fa fa-instagram"></a>
             </footer> 
           <marquee>This month one-way specials starting at $299.00</marquee>
     </footer>
