--- a/week7/Fleet.html
+++ b/week7/Fleet.html
@@ -4,12 +4,11 @@
    <link rel="stylesheet" href="fleet.css">
 
 </head>
-<body>
-
+<body>  
 
 <div class="grid-container">
-  <div>Our Inventory</div>
- 
+    <h1>Our Inventory</h1>
+  <nav><a class="active" href="Home.html"><i class="fa fa-fw fa-home"></i> Home</a></nav>
   <div class="Image">
     <img src="box1.jpg"/>
     <img src="box2.jpg"/>
