--- a/week8/Reflect.html
+++ b/week8/Reflect.html
@@ -8,7 +8,12 @@
 
 <h2>My Reflection</h2>
 
-
+<H10>My images reflects everything i have learned over the past eight weeks, I've learned to always have a open
+  mind and stay focused. I never thought I would be able to do this but i now see I can.</p> I also learned that I must
+  have a balanced lifestyle to succeed. I've developed personal tools that I will take with me. With grit and tenacity and you
+  will be able to accomplish anything. I'm finally getting the hang of grids and media queries. The solution is to practice
+  more to become better.</p> 
+</10>
 <div class="grid-container">
   <img src="Changing.jpg" class="box1"><h1>You must change to overcome obstacles and it starts with ambition</h1>
   <img src="determined.jpg" class="box2"><h3>Determination will outlast any doubt</h3>
@@ -25,7 +30,7 @@
   </div>
 </div>
 <footer>
-    <marquee><img src="box1.png"><h4>Where it's all about the students></h4></marquee> 
+    <marquee><img src="box1.png"><h9>Where it's all about the students></h9></marquee> 
 </footer>
 </body>
 </html>
